EX-4150, EX-4205, EX-4206: Fix disappearing images from cards on iOS

--- a/modules/mobile-ui/sources/styles/style.sass
+++ b/modules/mobile-ui/sources/styles/style.sass
@@ -189,14 +189,15 @@ img
     /* margin-left: 87px
 
 .EZ-Cliqz-Header
-  background-repeat: no-repeat
-  background-position: 0
-  padding-left: 98px
-  line-height: 1.5rem
-  text-align: right
-  margin: 1rem 0
-  img
-    margin: 0 0.5rem
+  .cliqz-title
+    margin: 0 0 1rem
+    width: 50%
+  .cliqz-social
+    float: right
+    width: 50%
+    img
+      float: right
+      margin: 0 0.5rem 0.25rem
 
 .EZ-Cliqz-Body-H1
   font-weight: bold
@@ -2071,6 +2072,10 @@ em
         td
           background-color: #c7e8ad
 
+
+.transform-wrapper
+  transform: translate(0, 0)
+  -webkit-transform: translate(0, 0)
 
 ::-webkit-scrollbar
   display: none
